=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

quotemeta path_info in Registry regexp
[Tobias Hoellrich <thoellri@adobe.com>]

flush r->finfo cache if r->filename fails
[Roger Espel Llima <espel@iagora.net>]

fix per-dir merging of PerlSetupEnv [Eric Cholet <cholet@logilune.com>]

INSTALL.raven update [Adam Qualset <adam@covalent.net>]

backed out $Apache::Server::ConfigTestOnly until proper Apache support
is in place

fix $r->bytes_sent($bytes)

support version parsing of 1.3.13-dev's httpd.h

fix for 'sub handler : method {}' support when method is not found
[Eric Cholet <cholet@logilune.com>]

Apache::ExtUtils will now generate and END routine to call
ap_remove_module() [Christopher Chan-N <uichannui@tiny.org>]

rename Apache::{PerlRun,RegistryNG}::update_mtime to set_mtime, so
Apache::update_mtime is not overridden
thanks to Michael Blakeley for the spot

constant 'DECLINED' wasn't imported by Apache::RegistryBB, thanks to
Michael Blakeley for the spot [Eric Cholet <cholet@logilune.com>]

fixes for building with stronghold
[Sander van Zoest <sander@vanZoest.com>]

Apache::Resource was not converting PERL_RLIMIT_AS to MB values
thanks to Ian Kallen for the spot

fix unescape_url_info() when url is undef or "",
thanks to Kenneth Lee for the spot

fix 1.24's Apache::Table->unset changes for win32
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix broken Win32 build (unresolved external symbol _ap_configtestonly)
[Eric Cholet <cholet@logilune.com>]

=item 1.24 - May 16, 2000

'sub handler : method {}' is now treated as a method handler

variable $Apache::Server::ConfigTestOnly is set to 1 if Apache
is running in configuration test mode (httpd -t)
(not unavailable under Win32)
[Eric Cholet <cholet@logilune.com>]

add PerlAddVar directive, like PerlSetVar, but uses ap_table_add
instead of ap_table_set
