@@ -10,6 +10,8 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_01-dev
 
+fix $r->args(undef), thanks to Greg Cope for the spot
+
 quotemeta path_info in Registry regexp
 [Tobias Hoellrich <thoellri@adobe.com>]
 
